Rework pipeline node type handling