@@ -8,15 +8,25 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import io.metaloom.cortex.api.media.LoomMedia;
-import io.vertx.core.json.JsonArray;
 
+/**
+ * What the sink uploads is now decided by the {@code artifacts} input port, in sequence order.
+ *
+ * <p>
+ * The {@code artifacts} option ({@code nodeId:outputKey} strings) and the {@code autoDiscover} flag
+ * (upload anything whose key ends in {@code _path}) are both gone, so the cases that covered them
+ * are gone with them - there is nothing left to auto-discover from and no node id to name. An edge
+ * into the typed {@code artifact/*} port says which file from which node, and says it in a way a
+ * rename cannot break. Everything below is a rule that still exists: ordering, indexing,
+ * resolution, dedupe, absence and {@code includeSource}.
+ * </p>
+ */
 public class ArtifactSelectorTest {
 
 	@TempDir
@@ -47,150 +57,92 @@ public class ArtifactSelectorTest {
 		return media;
 	}
 
-	// --- auto-discovery -------------------------------------------------------------------
+	// --- what the port carries ------------------------------------------------------------
 
 	@Test
-	public void testAutoDiscoveryPicksUpPathOutputs() {
-		Map<String, Map<String, Object>> upstream = Map.of(
-			"thumbnail", Map.of("thumbnail_path", thumb.toString(), "thumbnail_flag", "DONE"),
-			"depthmap", Map.of("depthmap_path", depth.toString()));
+	public void testEveryElementOfThePortIsSelected() {
+		List<SinkArtifact> selected = selector.select(List.of(thumb.toString(), depth.toString()), null, false);
 
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of(), true, false);
-
-		assertThat(selected).extracting(SinkArtifact::file).containsExactlyInAnyOrder(thumb, depth);
+		assertThat(selected).extracting(SinkArtifact::file).containsExactly(thumb, depth);
 	}
 
 	@Test
-	public void testAutoDiscoveryIgnoresNonPathOutputs() {
-		// depthmap_meta is JSON and thumbnail_flag is a status - neither is a file.
-		Map<String, Map<String, Object>> upstream = Map.of(
-			"depthmap", Map.of("depthmap_path", depth.toString(),
-				"depthmap_meta", "{\"model\":\"x\"}", "depthmap_flag", "DONE"));
-
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of(), true, false);
-
-		assertThat(selected).extracting(SinkArtifact::sourceKey).containsExactly("depthmap_path");
-	}
-
-	@Test
-	public void testAutoDiscoveryCanBeDisabled() {
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail", Map.of("thumbnail_path", thumb.toString()));
-
-		assertThat(selector.select(upstream, null, List.of(), false, false)).isEmpty();
-	}
-
-	// --- explicit selection ---------------------------------------------------------------
-
-	@Test
-	public void testExplicitListSelectsExactlyWhatItNames() {
-		Map<String, Map<String, Object>> upstream = Map.of(
-			"thumbnail", Map.of("thumbnail_path", thumb.toString()),
-			"depthmap", Map.of("depthmap_path", depth.toString()));
-
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of("depthmap:depthmap_path"), true, false);
-
-		// Auto-discovery is off whenever an explicit list is given - otherwise excluding a
-		// discovered artifact would be impossible.
-		assertThat(selected).extracting(SinkArtifact::file).containsExactly(depth);
-	}
-
-	@Test
-	public void testExplicitListPreservesOrder() {
-		Map<String, Map<String, Object>> upstream = Map.of(
-			"thumbnail", Map.of("thumbnail_path", thumb.toString()),
-			"depthmap", Map.of("depthmap_path", depth.toString()));
-
-		List<SinkArtifact> selected = selector.select(upstream, null,
-			List.of("depthmap:depthmap_path", "thumbnail:thumbnail_path"), true, false);
+	public void testSequenceOrderIsPreserved() {
+		// The port's element order is the upload order: it is the order the producer emitted in,
+		// and a key template keyed on the index would otherwise name the wrong file.
+		List<SinkArtifact> selected = selector.select(List.of(depth.toString(), thumb.toString()), null, false);
 
 		assertThat(selected).extracting(SinkArtifact::file).containsExactly(depth, thumb);
 	}
 
 	@Test
-	public void testAbsentAndMalformedEntriesAreSkippedNotFatal() {
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail", Map.of("thumbnail_path", thumb.toString()));
-
-		List<SinkArtifact> selected = selector.select(upstream, null,
-			List.of("missing:nope", "malformed", "thumbnail:thumbnail_path"), true, false);
-
-		assertThat(selected).extracting(SinkArtifact::file).containsExactly(thumb);
+	public void testAnEmptyPortSelectsNothing() {
+		assertThat(selector.select(List.of(), null, false)).isEmpty();
+		assertThat(selector.select(null, null, false)).isEmpty();
 	}
 
-	// --- multi-valued outputs -------------------------------------------------------------
+	@Test
+	public void testProvenanceNamesThePortRatherThanAnUpstreamNode() {
+		// The selector cannot know which node filled the port, and no longer needs to: the graph
+		// does. Recording the port id keeps the label honest instead of guessing a node name.
+		List<SinkArtifact> selected = selector.select(List.of(thumb.toString()), null, false);
+
+		assertThat(selected).extracting(SinkArtifact::sourceNode).containsExactly(SinkArtifact.ARTIFACTS_PORT);
+		assertThat(selected).extracting(SinkArtifact::sourceKey).containsExactly(SinkArtifact.ARTIFACTS_PORT);
+	}
+
+	// --- multi-element ports --------------------------------------------------------------
 
 	@Test
-	public void testListOutputsBecomeIndexedArtifacts() throws IOException {
+	public void testSeveralElementsBecomeIndexedArtifacts() throws IOException {
 		Path a = write("script_bin/n/a.png");
 		Path b = write("script_bin/n/b.png");
-		Map<String, Map<String, Object>> upstream = Map.of("script",
-			Map.of("frames", List.of(a.toString(), b.toString())));
 
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of("script:frames"), false, false);
+		List<SinkArtifact> selected = selector.select(List.of(a.toString(), b.toString()), null, false);
 
 		assertThat(selected).extracting(SinkArtifact::index).containsExactly(0, 1);
 		assertThat(selected).allMatch(SinkArtifact::multiValued);
 	}
 
 	@Test
-	public void testJsonArrayOutputsAreAcceptedToo() throws IOException {
-		// ScriptNode re-emits a cached list through new JsonObject(cached), so the same output
-		// arrives as a JsonArray rather than a List.
-		Path a = write("script_bin/n/c.png");
-		Map<String, Map<String, Object>> upstream = Map.of("script",
-			Map.of("frames", new JsonArray().add(a.toString())));
+	public void testASingleElementIsNotMarkedMultiValued() {
+		List<SinkArtifact> selected = selector.select(List.of(thumb.toString()), null, false);
 
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of("script:frames"), false, false);
-
-		assertThat(selected).extracting(SinkArtifact::file).containsExactly(a);
-		assertThat(selected.get(0).multiValued()).isTrue();
-	}
-
-	@Test
-	public void testNonPathValuesAreIgnored() {
-		Map<String, Map<String, Object>> upstream = Map.of("quality", Map.of("blurriness", 42.0));
-
-		assertThat(selector.select(upstream, null, List.of("quality:blurriness"), false, false)).isEmpty();
+		// So the key template does not append a "[0]" suffix to a lone artifact.
+		assertThat(selected).hasSize(1);
+		assertThat(selected.get(0).multiValued()).isFalse();
+		assertThat(selected.get(0).index()).isZero();
 	}
 
 	// --- resolution rules -----------------------------------------------------------------
 
 	@Test
 	public void testRelativePathsResolveAgainstTheMetaPath() {
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail",
-			Map.of("thumbnail_path", "thumbnail_bin/ab/sheet.thumb"));
-
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of(), true, false);
+		List<SinkArtifact> selected = selector.select(List.of("thumbnail_bin/ab/sheet.thumb"), null, false);
 
 		assertThat(selected).extracting(SinkArtifact::file).containsExactly(thumb);
 	}
 
 	@Test
 	public void testDuplicatePathsAreCollapsed() {
-		Map<String, Map<String, Object>> upstream = Map.of(
-			"a", Map.of("x_path", thumb.toString()),
-			"b", Map.of("y_path", thumb.toString()));
-
-		assertThat(selector.select(upstream, null, List.of(), true, false)).hasSize(1);
+		// Two elements pointing at one file is waste, never intent.
+		assertThat(selector.select(List.of(thumb.toString(), thumb.toString()), null, false)).hasSize(1);
 	}
 
 	@Test
 	public void testMissingFilesAreSelectedButFlaggedAbsent() {
 		// Recorded rather than filtered: "the producer said it wrote this and it is not here" is
 		// the affinity failure the node must report, not a silent skip.
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail",
-			Map.of("thumbnail_path", metaPath.resolve("gone.thumb").toString()));
-
-		List<SinkArtifact> selected = selector.select(upstream, null, List.of(), true, false);
+		List<SinkArtifact> selected = selector.select(List.of(metaPath.resolve("gone.thumb").toString()), null, false);
 
 		assertThat(selected).hasSize(1);
 		assertThat(selected.get(0).present()).isFalse();
 	}
 
 	@Test
-	public void testBlankValuesAreIgnored() {
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail", Map.of("thumbnail_path", "  "));
-
-		assertThat(selector.select(upstream, null, List.of(), true, false)).isEmpty();
+	public void testBlankAndNullValuesAreIgnored() {
+		assertThat(selector.select(List.of("  "), null, false)).isEmpty();
+		assertThat(selector.select(java.util.Arrays.asList((String) null), null, false)).isEmpty();
 	}
 
 	// --- includeSource --------------------------------------------------------------------
@@ -198,9 +150,8 @@ public class ArtifactSelectorTest {
 	@Test
 	public void testIncludeSourceAddsTheMediaItem() throws IOException {
 		Path source = write("library/clip.mp4");
-		Map<String, Map<String, Object>> upstream = Map.of("thumbnail", Map.of("thumbnail_path", thumb.toString()));
 
-		List<SinkArtifact> selected = selector.select(upstream, media(source), List.of(), true, true);
+		List<SinkArtifact> selected = selector.select(List.of(thumb.toString()), media(source), true);
 
 		assertThat(selected).extracting(SinkArtifact::file).containsExactlyInAnyOrder(thumb, source);
 		assertThat(selected).filteredOn(a -> a.file().equals(source))
@@ -211,33 +162,43 @@ public class ArtifactSelectorTest {
 	public void testIncludeSourceIsOffByDefault() throws IOException {
 		Path source = write("library/clip2.mp4");
 
-		assertThat(selector.select(Map.of(), media(source), List.of(), true, false)).isEmpty();
+		assertThat(selector.select(List.of(), media(source), false)).isEmpty();
 	}
 
 	@Test
-	public void testSourceMediaIsNotDuplicatedWhenAlsoAnUpstreamPath() throws IOException {
-		Path source = write("library/clip3.mp4");
-		Map<String, Map<String, Object>> upstream = Map.of("x", Map.of("x_path", source.toString()));
+	public void testTheSourceMediaComesLast() throws IOException {
+		// So a template that numbers artifacts keeps the produced files stable when the archive
+		// flag is toggled on.
+		Path source = write("library/clip4.mp4");
 
-		assertThat(selector.select(upstream, media(source), List.of(), true, true)).hasSize(1);
+		List<SinkArtifact> selected = selector.select(List.of(thumb.toString()), media(source), true);
+
+		assertThat(selected).extracting(SinkArtifact::file).containsExactly(thumb, source);
+	}
+
+	@Test
+	public void testSourceMediaIsNotDuplicatedWhenAlsoOnThePort() throws IOException {
+		Path source = write("library/clip3.mp4");
+
+		assertThat(selector.select(List.of(source.toString()), media(source), true)).hasSize(1);
 	}
 
 	// --- artifact helpers -----------------------------------------------------------------
 
 	@Test
 	public void testArtifactDerivesNameParts() {
-		SinkArtifact artifact = new SinkArtifact("thumbnail", "thumbnail_path", 0, false, thumb, true);
+		SinkArtifact artifact = new SinkArtifact(SinkArtifact.ARTIFACTS_PORT, SinkArtifact.ARTIFACTS_PORT, 0, false, thumb, true);
 
 		assertThat(artifact.fileName()).isEqualTo("sheet.thumb");
 		assertThat(artifact.baseName()).isEqualTo("sheet");
 		assertThat(artifact.extension()).isEqualTo(".thumb");
-		assertThat(artifact.describe()).isEqualTo("thumbnail:thumbnail_path");
+		assertThat(artifact.describe()).isEqualTo("artifacts:artifacts");
 	}
 
 	@Test
 	public void testMultiValuedArtifactDescribesItsIndex() {
-		SinkArtifact artifact = new SinkArtifact("script", "frames", 2, true, thumb, true);
+		SinkArtifact artifact = new SinkArtifact(SinkArtifact.ARTIFACTS_PORT, SinkArtifact.ARTIFACTS_PORT, 2, true, thumb, true);
 
-		assertThat(artifact.describe()).isEqualTo("script:frames[2]");
+		assertThat(artifact.describe()).isEqualTo("artifacts:artifacts[2]");
 	}
 }
